tests/compile-fail/generated/derives-span-Default-tuple-struct.stderr
error[E0277]: the trait bound `Error: std::default::Default` is not satisfied
  --> $DIR/derives-span-Default-tuple-struct.rs:15:5
   |
15 |     Error
   |     ^^^^^ the trait `std::default::Default` is not implemented for `Error`
   |
   = note: required by `std::default::Default::default`
